# GameEnvSetter

./: .gitignore  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DisplayConfigManager.cpp  DisplayConfigManager.h  DisplaySettings.qml  GraphicsConfigManager.cpp  GraphicsConfigManager.h  GraphicsSettings.qml  KeyboardConfigManager.cpp  KeyboardConfigManager.h  KeyboardSettings.qml  Main.qml  MouseConfigManager.cpp  MouseConfigManager.h  MouseSettings.qml  NVIDIAGraphicsConfigManager.cpp  NVIDIAGraphicsConfigManager.h  README.md  RegistryOperator.cpp  RegistryOperator.h  RegistrySettings.qml  SystemValueConverter.cpp  SystemValueConverter.h  help.txt  main.cpp  自己显卡的全局设置.txt
